--- a/project/templates/components/navbar.html
+++ b/project/templates/components/navbar.html
@@ -17,7 +17,10 @@
                 {% if request.path == '/' %}
                     aria-current="page" 
                 {% endif %}
-                href="{% url 'products:product_list' %}">Productos</i></a>
+                href="{% url 'products:index' %}">Inicio</i></a>
+            </li>
+            <li class="nav-item scale {% if request.path == '/productos/' %}active-nav{% endif %}">
+                <a class="nav-link fw-bold" href="{% url 'products:product_list' %}">Productos</a>
             </li>
             <li class="nav-item scale {% if request.path == '/sobre-nosotros/' %}active-nav{% endif %}">
                 <a class="nav-link fw-bold" href="{% url 'products:about' %}">Sobre nosotros</a>
