--- a/project/templates/products/about.html
+++ b/project/templates/products/about.html
@@ -9,7 +9,7 @@
 
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb">
-                      <li class="breadcrumb-item"><a href="{% url 'products:product_list' %}"><i class="fas fa-home"></i> Inicio</a></li>
+                      <li class="breadcrumb-item"><a href="{% url 'products:index' %}"><i class="fas fa-home"></i> Inicio</a></li>
                       <li class="breadcrumb-item active" aria-current="page">Sobre nosotros</li>
                     </ol>
                 </nav>
