--- a/project/templates/products/contact.html
+++ b/project/templates/products/contact.html
@@ -8,7 +8,7 @@
         <div class="px-0 px-md-5">
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
-                  <li class="breadcrumb-item"><a href="{% url 'products:product_list' %}"><i class="fas fa-home"></i> Inicio</a></li>
+                  <li class="breadcrumb-item"><a href="{% url 'products:index' %}"><i class="fas fa-home"></i> Inicio</a></li>
                   <li class="breadcrumb-item active" aria-current="page">Contacto</li>
                 </ol>
             </nav>
