--- a/project/templates/products/product_detail.html
+++ b/project/templates/products/product_detail.html
@@ -9,7 +9,8 @@
                 <div class="px-0 px-md-5">
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb">
-                          <li class="breadcrumb-item"><a href="{% url 'products:product_list' %}"><i class="fas fa-home"></i> Inicio</a></li>
+                          <li class="breadcrumb-item"><a href="{% url 'products:index' %}"><i class="fas fa-home"></i> Inicio</a></li>
+                          <li class="breadcrumb-item"><a href="{% url 'products:product_list' %}">Productos</a></li>
                           <li class="breadcrumb-item active" aria-current="page">{{ product.name }}</li>
                         </ol>
                     </nav>
