--- a/project/templates/products/products_admin.html
+++ b/project/templates/products/products_admin.html
@@ -5,7 +5,7 @@
         <div class="p-0 p-sm-3 p-md-5 py-2">
                 <nav aria-label="breadcrumb px-0 px-md-5">
                     <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="{% url 'products:product_list' %}"><i class="fas fa-home"></i> Inicio</a></li>
+                    <li class="breadcrumb-item"><a href="{% url 'products:index' %}"><i class="fas fa-home"></i> Inicio</a></li>
                     <li class="breadcrumb-item active" aria-current="page">Administración</li>
                     </ol>
                 </nav>
