Se corrige views

--- a/project/templates/components/footer.html
+++ b/project/templates/components/footer.html
@@ -2,6 +2,7 @@
 
 <div class="d-flex flex-wrap justify-content-between align-items-center px-4 px-md-5 pb-4">
     <ul class="col-12 nav justify-content-center py-3 mb-3 fw-semibold border-bottom fs-6">
+        <li class="nav-item"><a href="{% url 'products:index' %}" class="nav-link px-2 text-body-secondary fw-bold">Inicio</a></li>
         <li class="nav-item"><a href="{% url 'products:product_list' %}" class="nav-link px-2 text-body-secondary fw-bold">Productos</a></li>
         <li class="nav-item"><a href="{% url 'products:contact' %}" class="nav-link px-2 text-body-secondary fw-bold">Sobre nosotros</a></li>
         <li class="nav-item"><a href="{% url 'products:contact' %}" class="nav-link px-2 text-body-secondary fw-bold">Contacto</a></li>
