--- a/project/templates/products/product_list.html
+++ b/project/templates/products/product_list.html
@@ -30,7 +30,7 @@
 <section id="products" class="container-fluid py-3 fondo">
     <div class="p-3 p-md-5">
         <div class="px-0 px-md-5">
-          <div class="d-flex justify-content-start">
+          <div class="d-flex justify-content-start mb-3">
               <nav aria-label="breadcrumb">
                   <ol class="breadcrumb">
                       <li class="breadcrumb-item"><a href="{% url 'products:index' %}"><i class="fas fa-home"></i> Inicio</a></li>
