Se corrige pagina de mensajes

--- a/project/templates/users/message_detail.html
+++ b/project/templates/users/message_detail.html
@@ -13,8 +13,9 @@
     <div class="modal-body">   
         <ul class="list-group">
             <li class="list-group-item"><strong>Nombre:</strong> {{ message.name }}</li>
-            <li class="list-group-item"><strong>Fecha:</strong> {{ message.email }}</li>
-            <li class="list-group-item"><strong>Email:</strong> {{ message.date }}</li>
+            <li class="list-group-item"><strong>Email:</strong> {{ message.email }}</li>
+            <li class="list-group-item"><strong>Telefono:</strong> {{ message.phone }}</li>
+            <li class="list-group-item"><strong>Fecha:</strong> {{ message.date }}</li>
             <li class="list-group-item"><strong>Leido:</strong> <i class="fa fa-check text-success"></i></li>
             <li class="list-group-item"><strong>Mensaje:</strong> {{ message.content|linebreaks }}</li>
         </ul>
