--- a/project/templates/users/partials/message_list.html
+++ b/project/templates/users/partials/message_list.html
@@ -16,7 +16,7 @@
     <tr>
       <td>{{ message.name }}</td>
       <td>{{ message.email }}</td>
-      <td class="ocultar">{{ message.date|date:"d/m/Y - H:i" }}hs</td>
+      <td class="ocultar">{{ message.date|date:"d/m/Y" }}</td>
       <td>
         {% if message.is_read %}
         <i class="fa fa-check text-success">
